feat: 하루에 한 번 인증 설정 및 최장 기간 계산 로직 추가